--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <footer class="app-footer">
             <input type="text" id="task-input" placeholder="请输入消息...">
-            <button id="send-button">发送</button>
+            <button id="send-button">➤</button>
         </footer>
     </div>
     <script src="script.js"></script>
