--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
         <footer class="app-footer">
+            <button id="reroll-footer-btn" class="footer-btn" title="重新生成最后一条回复">🗘</button>
             <input type="text" id="task-input" placeholder="请输入消息...">
             <button id="send-button">➤</button>
         </footer>
