--- a/index.html
+++ b/index.html
@@ -17,20 +17,32 @@
 <body>
     <div id="app-container">
         
+
+
         <!-- ======================= -->
         <!-- 页面 1：好友列表 (首页) -->
         <!-- ======================= -->
         <div id="view-contact-list">
             <header class="app-header">
                 <h1>通讯录</h1>
-                <!-- 右上角添加按钮 -->
                 <button id="add-contact-btn" class="header-icon-btn right" title="添加新角色">＋</button>
-                <!-- 自定义壁纸按钮 -->
-                <button id="main-settings-btn" class="header-icon-btn left"  title="全局设置">⚙</button>
+                <button id="main-settings-btn" class="header-icon-btn left" title="全局设置">⚙</button>
             </header>
             
-            <div id="contact-list-container">
-                <!-- 这里的列表由 JS 动态生成 -->
+            <!-- 新增这一层：统一的毛玻璃容器 -->
+            <div id="contact-list-wrapper">
+                <div id="contact-list-container">
+                    <!-- 这里的列表由 JS 动态生成（保持原来的结构不变） -->
+                    <!-- 示例（实际由 JS 生成）：
+                    <div class="contact-item" data-id="1">
+                        <img src="xxx.jpg" class="contact-avatar">
+                        <div class="contact-info">
+                            <h3>张三</h3>
+                            <p>最后一句消息预览...</p>
+                        </div>
+                    </div>
+                    -->
+                </div>
             </div>
         </div>
 
