--- a/index.html
+++ b/index.html
@@ -155,6 +155,43 @@
                 </div>
             </div>
 
+            <!-- API 与模型设置（已包含密钥，无多余提示） -->
+            <h3 class="settings-section-title">API 与模型设置</h3>
+            <div class="main-options api-section">
+
+                <!-- API 地址 -->
+                <div class="main-option api-input-card">
+                    <label class="api-label">API 地址-不加v1/chat/completions</label>
+                    <input type="url" id="custom-api-url" class="setting-input" 
+                        placeholder="例如: https://api.openai.com/v1">
+                </div>
+
+                <!-- API 密钥 -->
+                <div class="main-option api-input-card">
+                    <label class="api-label">API 密钥</label>
+                    <input type="password" id="custom-api-key" class="setting-input" 
+                        placeholder="sk-XXXXXXXXXXXXXXXXXXXXXXXX" autocomplete="off">
+                </div>
+
+            <!-- 模型选择 -->
+            <div class="main-option model-card">
+                <label for="custom-model-select" class="api-label2">模型</label>
+
+                <!-- 直接放置控制行，移除了多余的 .model-card div -->
+                <div class="model-row">
+                    <div class="model-row">
+                        <!-- 1. 这是一个输入框，id 还是叫 custom-model-select，为了兼容你的保存逻辑 -->
+                        <input type="text" id="custom-model-select" list="model-options" class="model-select" placeholder="手动输入或点击拉取...">
+                        
+                        <!-- 2. 这是一个隐藏的列表，id 叫 model-options，JS 就是在找它！ -->
+                        <datalist id="model-options">
+                            <!-- 这里的选项会被 JS 自动填充 -->
+                        </datalist>
+                    </div>
+                    <button id="fetch-models-btn" class="fetch-models-btn">拉取模型</button>
+                </div>
+            </div>
+
             <!-- ============ 2. 导入导出配置 ============ -->
             <h3 style="margin: 30px 0 12px; font-size: 17px; color: #555;">导入导出配置</h3>
             <div class="main-options">
