--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -85,8 +85,8 @@
         <div class="message-wrapper">
             <!-- 1. 头像 -->
             <div class="avatar-container">
-                <img class="avatar-img" src="" alt="avatar">
-                <div class="avatar-text" style="display:none;"></div>
+                <img class="avatar-img hidden">
+                <div class="avatar-text hidden"></div>
             </div>
             
             <!-- 2. 气泡内容 -->
