--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="/icon192.png">
     <link rel="apple-touch-icon" href="/icon192.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <link rel="stylesheet" href="style.css">
@@ -115,11 +116,11 @@
             <div class="input-group avatar-upload-group">
                 <label>角色头像</label>
                 <div class="avatar-preview-wrapper">
-                    <img id="edit-avatar-preview" class="avatar-preview" src="🦑" alt="预览">
+                    <img id="edit-avatar-preview" class="avatar-preview" src="char.jpg" alt="预览">
                     <input type="file" id="edit-avatar-file" accept="image/*" style="display:none;">
                     <button type="button" id="edit-avatar-upload-btn" class="small-btn">上传本地图片</button>
                 </div>
-                <input type="text" id="edit-avatar" placeholder="或输入 Emoji / 图片URL" value="🦑">
+                <input type="text" id="edit-avatar" placeholder="或输入 Emoji / 图片URL" value="⭐">
             </div>
 
             <!-- 新增：用户自己的头像上传（放在角色头像下面） -->
