--- a/index.html
+++ b/index.html
@@ -460,6 +460,21 @@
             <button id="main-cancel" style="padding: 12px 28px; font-size: 16px;">取消</button>
             <button id="main-confirm" class="primary" style="padding: 12px 32px; font-size: 16px;">应用并关闭</button>
         </div>
+
+    </div>
+    </div>
+
+
+    <!-- 消息长按上下文菜单 -->
+    <div id="msg-context-menu" class="msg-context-menu">
+        <div class="menu-backdrop"></div>
+        <div class="menu-panel">
+            <button data-action="edit">编辑</button>
+            <button data-action="copy">复制</button>
+            <button data-action="delete">删除</button>
+            <hr>
+            <button data-action="cancel">取消</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
