--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
 
                 <!-- ★★★★★ 4. 新增：世界书 (Refactored for Books) ★★★★★ -->
                 <div id="worldbook" class="tab-pane">
+                    <h3 class="section-title">世界书设置</h3>
                     <div class="wi-container">
                         
                         <!-- 1. 顶部：大分类（书）管理栏 -->
