--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
                                     <!-- 示例 HTML 位置，请根据你的界面布局调整 -->
                                     <div class="input-group">
-                                        <label>条目名称 (Comment)</label>
+                                        <label>条目名称</label>
                                         <!-- 给这个输入框起个ID，比如 wi-entry-comment -->
                                         <input type="text" id="wi-edit-comment" placeholder="例如：Eldoria 森林简介" />
                                     </div>
@@ -447,7 +447,7 @@
                                     </div>
 
                                     <div class="wi-form-group flex-grow">
-                                        <label>设定内容 <span class="sub-text">(支持 {{user}}, {{char}})</span></label>
+                                        <label>设定内容</label>
                                         <textarea id="wi-edit-content" class="setting-input wi-textarea" placeholder="当检测到关键词时，注入给AI的内容..."></textarea>
                                     </div>
 
