--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- 仿原生状态栏 -->
+    <div id="app-status-bar" class="app-status-bar">
+        <div class="sb-left">
+            <span id="sb-time">00:00</span>
+        </div>
+        <div class="sb-right">
+            <span id="sb-battery-text">100%</span>
+            <div class="sb-battery-icon">
+                <div id="sb-battery-level" class="sb-battery-level"></div>
+            </div>
+        </div>
+    </div>
+
     <div id="app-container">
         
 
