--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>TeleWindy</title>
     
     <!-- PWA 相关 -->
@@ -551,4 +551,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
