--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>TeleWindy</title>
     
     <!-- PWA 相关 -->
@@ -16,10 +16,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- 仿原生状态栏 -->
+    <div id="app-status-bar" class="app-status-bar">
+        <div class="sb-left">
+            <span id="sb-time">00:00</span>
+        </div>
+        <div class="sb-right">
+            <span id="sb-battery-text">100%</span>
+            <div class="sb-battery-icon">
+                <div id="sb-battery-level" class="sb-battery-level"></div>
+            </div>
+        </div>
+    </div>
+
     <div id="app-container">
         
-
-
         <!-- ======================= -->
         <!-- 页面 1：好友列表 (首页) -->
         <!-- ======================= -->
@@ -551,5 +563,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
