--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -155,7 +155,7 @@
             <div class="input-group avatar-upload-group">
                 <label>角色头像</label>
                 <div class="avatar-preview-wrapper">
-                    <img id="edit-avatar-preview" class="avatar-preview" src="char.jpg" alt="预览">
+                    <img id="edit-avatar-preview" class="avatar-preview" src="./char.jpg" alt="预览">
                     <input type="file" id="edit-avatar-file" accept="image/*" style="display:none;">
                     <button type="button" id="edit-avatar-upload-btn" class="small-btn">上传本地图片</button>
                 </div>
@@ -166,7 +166,7 @@
             <div class="input-group avatar-upload-group">
                 <label>我的头像（用户头像）</label>
                 <div class="avatar-preview-wrapper">
-                    <img id="user-avatar-preview" class="avatar-preview" src="https://api.dicebear.com/7.x/avataaars/svg?seed=user" alt="预览">
+                    <img id="user-avatar-preview" class="avatar-preview" src="./user.jpg" alt="预览">
                     <input type="file" id="user-avatar-file" accept="image/*" style="display:none;">
                     <button type="button" id="user-avatar-upload-btn" class="small-btn">上传本地图片</button>
                 </div>
@@ -564,6 +564,6 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
