--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- 仿原生状态栏 -->
     <div id="app-status-bar" class="app-status-bar">
-        <div class="sb-left">
+        <!-- <div class="sb-left">
             <span id="sb-time">00:00</span>
         </div>
         <div class="sb-right">
@@ -27,7 +27,7 @@
             <div class="sb-battery-icon">
                 <div id="sb-battery-level" class="sb-battery-level"></div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     
