--- a/index.html
+++ b/index.html
@@ -564,6 +564,13 @@
     </div>
 
 
+    <!-- 在这里，你的主脚本之前，引入这两个库 -->
+    <!-- 1. 引入 marked.js 用于解析 Markdown -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+    <!-- 2. 引入 DOMPurify 用于净化 HTML，防止 XSS 攻击 -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
+
     <script src="./script.js"></script>
 </body>
 </html>
