--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div id="log-section" class="input-group log-section">
                 <label>调试信息</label>
                 <button id="btn-show-log" class="small-btn log-show-btn">
-                    查看上一轮发送的上下文
+                    查看teleWindy的上轮发送
                 </button>
             </div>
 
